# RabiJump

./: README.md  README_CN.md  README_cn.md
app/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
app/src/: custom.d.ts  main.tsx
app/src/api/: connect.ts  redirect.ts
app/src/hooks/: basic.ts  useLoading.ts
app/src/i18n/: en.json  resources.ts  zh.json
app/src/misc/: i18n.ts  storage.ts  util.ts
app/src/store/: app.ts  common.ts  links.ts
app/src/styles/: global.scss  scrollbar.scss
app/src/type/: app.ts  link.ts
app/src/views/: Loading.tsx  (+6 more)
docs/: API.md
server/: .gitignore  Cargo.toml  Dockerfile
server/src/: config.rs  main.rs
server/src/admin/: auth.rs  error.rs  mod.rs
server/src/redirect/: error.rs  mod.rs  model.rs
server/static/: index.html
server/static/assets/: AboutPage.13d77f91.js  AboutPage.1ad32ce6.js  AboutPage.239f25e6.js  AboutPage.4d0ac899.css  AboutPage.f587680d.js  ConfigPage.0a9bf7b1.js  ConfigPage.11f1853f.js  ConfigPage.a1f5bfe0.js  ConfigPage.ae297e14.css  ConfigPage.d5b7f04c.js  ContentHeader.3f02b2ce.js  ContentHeader.49828624.js  ContentHeader.af246c83.js  ContentHeader.c5ea3469.js  ContentHeader.fbe8eef8.css  DashBoard.2cb688ce.js  DashBoard.6da55a18.css  DashBoard.7ac1d1ae.js  DashBoard.8b8b443f.js  DashBoard.9dc19fe4.js  Home.78bc5386.js  Home.b2b16dde.js  Home.b97b4313.js  Home.f056bc95.js  LinksPage.06e03c77.js  LinksPage.0dfd10be.css  LinksPage.1589f497.css  LinksPage.7b0b7c77.js  LinksPage.af82e9d3.js  LinksPage.c0b1df4b.js  SwitchThemeButton.82b71c6d.js  SwitchThemeButton.8b819133.js  SwitchThemeButton.8df1ac05.js  SwitchThemeButton.f8b4d481.js  index.7b5bcad8.js  index.811d51f0.js  index.ac25c197.js  index.b2db8b05.css  index.da1ae531.css  index.fb700652.js  (+4 more)
(+30 files in other folders)
