[package]
name = "rabijump"
version = "0.1.0"
edition = "2021"
authors = ["LI Rui<me@lirui.tech>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Log
spdlog-rs = "0.2"

# Database
sled = "0.34"

# Web
poem = { verson = "1.3", features = ["static-files"] }

# Async
futures = "0.3"
tokio = { version = "1.20", features = ["full"] }

# Datatype
chrono = { version = "0.4", features = ["serde"]}

# Serde
bincode = "1.3"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

# Misc
passwords = "3.1"
once_cell = "1.13"
thiserror = "1.0"
anyhow = "1.0.59"
woothee = "0.13"